<resources>
  <string name="app_name">ZWallet</string>

  <!--commons-->
  <string name="settings">Settings</string>

  <string name="menu_dashboard">Dashboard</string>
  <string name="menu_title_trade">TRADE</string>
  <string name="menu_trade_buy">Buy</string>
  <string name="menu_trade_sell">Sell</string>
  <string name="menu_title_account">ACCOUNTS</string>
  <string name="menu_accounts_wallet">Wallet</string>
  <string name="menu_accounts_vault">Vault</string>
  <string name="menu_title_transaction">TRANSACTION</string>
  <string name="menu_transaction_pending">Pending</string>
  <string name="menu_transaction_processed">Processed</string>
  <string name="menu_title_more">MORE</string>
  <string name="menu_coin_ltc">LiteCoin</string>
  <string name="menu_coin_btc">BitCoin</string>

  <!--Unit-->
  <string name="unit_price">￥ %s</string>
  <string name="unit_btc">%s bits</string>
  <string name="unit_ltc">%s lits</string>

  <!--Processing-->
  <string name="loading">Loading</string>
  <string name="updating">updating</string>
  <string name="request_error_network">获取数据失败，请检查网络连接!</string>
  <string name="request_error_server">获取数据失败，请稍后再试!</string>

  <!--send funds-->
  <string name="wallet_label_send">Recipient</string>
  <string name="wallet_label_request">From</string>
  <string name="wallet_tab_send">Send</string>
  <string name="wallet_tab_request">Request</string>
  <string name="wallet_address_hint">Email or BitCoin address</string>
  <string name="wallet_amount_label">Amount</string>
  <string name="wallet_amount_hint">Coin amount</string>
  <string name="wallet_note_label">Note</string>
  <string name="wallet_note_hint">Write an optional message</string>
  <string name="wallet_btn_label_send">Send Funds</string>
  <string name="wallet_btn_label_request">Request Funds</string>

  <!--coin trade-->
  <string name="coin_trade_tab_sell">Sell</string>
  <string name="coin_trade_tab_buy">Buy</string>
  <string name="coin_trade_sell_label">Sell Coin</string>
  <string name="coin_trade_buy_label">Buy Coin</string>
  <string name="coin_trade_target_price_hint">Target Price</string>
  <string name="coin_trade_amount_label">Amount</string>
  <string name="coin_trade_money_cny_label">CNY</string>
  <string name="coin_trade_money_usd_label">USD</string>
  <string name="coin_trade_coin_label">Coin</string>
  <string name="coin_trade_target_amount_hint">Target Amount</string>
  <string name="coin_trade_amount_max_label">MAX</string>
  <string name="coin_trade_payment_method_label">Payment method</string>
  <string name="coin_trade_deposit_to_label">Deposit to</string>
  <string name="coin_trade_cost_fee_label">Fee</string>
  <string name="coin_trade_total_payment_label">Total</string>
  <string name="coin_trade_repeat_buy_hint">repeat this buy every </string>

  <!--order detail-->
  <string name="order_detail_price_amount">%1$s Per %2$s</string>
  <string name="order_detail_label_subtotal">Subtotal</string>
  <string name="order_detail_label_fee">HuoBi Fee</string>
  <string name="order_detail_label_total">Total</string>
  <string name="frequency">Coin Price Refresh Frequency</string>
  <string name="night_mode">Night Mode</string>

</resources>

