<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

  <data>
    <variable
        name="viewModel"
        type="com.zac4j.zwallet.viewmodel.MyWalletViewModel"
        />
  </data>

  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      >

    <include
        layout="@layout/include_actionbar"
        android:id="@id/actionbar"
        />

    <android.support.design.widget.TabLayout
        android:id="@id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="?android:attr/actionBarSize"
        >

      <android.support.design.widget.TabItem
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/wallet_tab_send"
          />

      <android.support.design.widget.TabItem
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/wallet_tab_request"
          />

    </android.support.design.widget.TabLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tab_layout"
        android:orientation="vertical"
        android:padding="@dimen/space.medium"
        >

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@{viewModel.fundsLabel}"
          android:textAppearance="@style/TextAppearance.AppCompat.Medium"
          tools:text="@string/wallet_label_send"
          />

      <android.support.design.widget.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/space.small"
          android:hint="@string/wallet_address_hint"
          >
        <android.support.design.widget.TextInputEditText
            android:id="@id/send_funds_et_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:text="@={viewModel.address}"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:addTextChangedListener="@{viewModel.recipientWatcher}"
            app:error="@{viewModel.addressError}"
            />
      </android.support.design.widget.TextInputLayout>

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/space.medium"
          android:text="@string/wallet_amount_label"
          android:textAppearance="@style/TextAppearance.AppCompat.Medium"
          />

      <android.support.design.widget.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/space.small"
          android:hint="@string/wallet_amount_hint"
          >
        <android.support.design.widget.TextInputEditText
            android:id="@id/send_funds_et_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:text="@={viewModel.amount}"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:addTextChangedListener="@{viewModel.amountWatcher}"
            app:error="@{viewModel.amountError}"
            />
      </android.support.design.widget.TextInputLayout>

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/space.medium"
          android:text="@string/wallet_note_label"
          android:textAppearance="@style/TextAppearance.AppCompat.Medium"
          />

      <android.support.design.widget.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/space.small"
          android:hint="@string/wallet_note_hint"
          >
        <android.support.design.widget.TextInputEditText
            android:id="@id/send_funds_et_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLength="25"
            android:text="@={viewModel.noteMessage}"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            />
      </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:visibility="@{viewModel.progressVisibility}"
        style="@style/Widget.AppCompat.ProgressBar"
        />

    <Button
        android:id="@id/send_funds_btn_send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:onClick="@{viewModel::onClick}"
        android:text="@{viewModel.fundsBtnLabel}"
        tools:text="@string/wallet_btn_label_send"
        style="@style/Widget.AppCompat.Button.Colored"
        />
  </RelativeLayout>
</layout>